blog caraousel done

--- a/index.htm
+++ b/index.htm
@@ -7,10 +7,14 @@
     <title>Blogs Vibes - 2020</title>
     <!-- CSS Script  -->
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- Font Awesome  -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <!-- Owl Carousel  -->
+    <link rel="stylesheet" href="./css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="./css/owl.theme.default.min.css" />
   </head>
   <body>
     <!-- Navigation  -->
@@ -42,12 +46,80 @@
     </nav>
     <!-- Navigation  -->
 
-    
+    <!-- main  -->
 
+    <main>
+      <!-- site title  -->
+      <section class="site-title">
+        <div class="site-background">
+          <h3>Tourism and Travelling</h3>
+          <h1>Amazing Places To Travel</h1>
+          <button class="btn">Explore</button>
+        </div>
+      </section>
+      <!-- site title  -->
+
+      <!-- Blog Carousel  -->
+
+      <section>
+        <div class="blog">
+          <div class="container">
+            <div class="owl-carousel owl-theme blog-post">
+              <div class="blog-content">
+                <img src="./assets/Blog-post/post-1.jpg" alt="post-1" />
+                <div class="blog-title">
+                  <h3>London Fashion Week</h3>
+                  <button class="btn btn-blog">Fashion</button>
+                  <span>2 minutes</span>
+                </div>
+              </div>
+              <div class="blog-content">
+                <img src="./assets/Blog-post/post-2.jpg" alt="post-1" />
+                <div class="blog-title">
+                  <h3>London Fashion Week</h3>
+                  <button class="btn btn-blog">Fashion</button>
+                  <span>2 minutes</span>
+                </div>
+              </div>
+              <div class="blog-content">
+                <img src="./assets/Blog-post/post-3.jpg" alt="post-1" />
+                <div class="blog-title">
+                  <h3>London Fashion Week</h3>
+                  <button class="btn btn-blog">Fashion</button>
+                  <span>2 minutes</span>
+                </div>
+              </div>
+              <div class="blog-content">
+                <img src="./assets/Blog-post/post-4.png" alt="post-1" />
+                <div class="blog-title">
+                  <h3>London Fashion Week</h3>
+                  <button class="btn btn-blog">Fashion</button>
+                  <span>2 minutes</span>
+                </div>
+              </div>
+            </div>
+            <div class="owl-navigation">
+              <span class="owl-nav-prev"
+                ><i class="fa fa-chevron-left"></i
+              ></span>
+              <span class="owl-nav-next"
+                ><i class="fa fa-chevron-right"></i
+              ></span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Blog Carousel  -->
+    </main>
+
+    <!-- main  -->
 
     <!-- Ends Here -->
+    <!-- JQUERY  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- JS Script -->
     <script src="./js/script.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- Owl Carousel -->
+    <script src="./js/owl.carousel.js"></script>
   </body>
 </html>
